# adabraka-ui

./: .claude-tasks.md  BUTTON_COMPONENT_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ICON_COMPONENT_REVIEW.md  PUBLISHING.md  README.md  RELEASE_NOTES_v0.1.0.md  SHADCN_DESIGN_PHILOSOPHY.md  TEXT_COMPONENT_REVIEW.md  rustc-ice-2025-10-23T03_34_57-21108.txt
docs/: index.html
examples/: animations_demo.rs  audio_player_demo.rs  button_styled_demo.rs  calendar_styled_demo.rs  card_demo.rs  card_styled_demo.rs  chart_demo.rs  command_palette_demo.rs  components_showcase.rs  data_table_demo.rs  debug_scroll.rs  demo.rs  demo_no_scroll.rs  drag_drop_styled_demo.rs  editor_demo.rs  editor_styled_demo.rs  gpui_extensions_showcase.rs  icon_showcase.rs  icon_test.rs  infinite_scroll_demo.rs  input_custom.rs  input_demo.rs  input_focus.rs  input_validation.rs  layout_demo.rs  menu_demo.rs  minimal_button.rs  navigation_menu_demo.rs  overlays_demo.rs  popover_menu_styled_demo.rs  progress_demo.rs  resizable_styled_demo.rs  select_tooltip_demo.rs  sidebar_demo.rs  simple_button_test.rs  simple_layout_demo.rs  slider_styled_demo.rs  status_bar_demo.rs  tabs_demo.rs  tabs_styled_demo.rs  (+12 more)
shiori/: Cargo.toml  TERMINAL_PLAN.md  test_images.sh
shiori/src/: ansi_parser.rs  app.rs  git_service.rs  git_state.rs  git_view.rs  ide_theme.rs  main.rs  pty_service.rs  search_bar.rs  settings.rs  status_bar.rs  terminal_state.rs  terminal_view.rs
shiori/src/completion/: menu.rs  mod.rs  state.rs  symbols.rs
shiori/src/lsp/: client.rs  registry.rs  transport.rs  types.rs
src/: animations.rs  gpui_ext.rs  http.rs  layout.rs  lib.rs  prelude.rs  transitions.rs  virtual_list.rs
src/charts/: area_chart.rs  bar_chart.rs  chart.rs  gauge.rs  heatmap.rs  mod.rs  pie_chart.rs  radar_chart.rs  treemap.rs
src/components/: animated_counter.rs  animated_list.rs  audio_player.rs  avatar.rs  button.rs  calendar.rs  carousel.rs  checkbox.rs  collapsible.rs  color_picker.rs  combobox.rs  confetti.rs  confirm_dialog.rs  countdown.rs  crop_area.rs  dot_pattern.rs  drag_drop.rs  drawer_navigation.rs  dropdown.rs  editor.rs  expandable_card.rs  file_upload.rs  hotkey_input.rs  icon.rs  icon_button.rs  icon_source.rs  inline_edit.rs  input.rs  input_state.rs  keyboard_shortcuts.rs  label.rs  meteors.rs  mod.rs  navigation_menu.rs  noise.rs  number_ticker.rs  pagination.rs  particle_emitter.rs  progress.rs  radio.rs  (+21 more)
src/display/: accordion.rs  badge.rs  card.rs  data_table.rs  mod.rs  table.rs
src/navigation/: app_menu.rs  breadcrumbs.rs  menu.rs  sidebar.rs  status_bar.rs  tabs.rs  toolbar.rs  tree.rs
src/overlays/: alert_dialog.rs  bottom_sheet.rs  command_palette.rs  context_menu.rs  dialog.rs  hover_card.rs  popover.rs  popover_menu.rs  sheet.rs  toast.rs
src/theme/: mod.rs  tokens.rs
