[package]
name = "adabraka-ui"
version = "0.1.0"
edition = "2021"
authors = ["Adabraka Team"]
license = "MIT"
description = "A comprehensive, professional UI component library for GPUI inspired by shadcn/ui. 70+ accessible components for building beautiful desktop applications."
repository = "https://github.com/augani/adabraka-ui"
homepage = "https://github.com/augani/adabraka-ui"
documentation = "https://docs.rs/adabraka-ui"
readme = "README.md"
keywords = ["gpui", "ui", "gui", "components", "desktop"]
categories = ["gui", "rendering"]
rust-version = "1.70"

[dependencies]
# Core Framework
gpui = "0.2.0"
smallvec = "1.13.2"
once_cell = "1.19"

# Text Processing
unicode-segmentation = "1.12"
regex = "1.10"

# Async Runtime
smol = "2.0.2"

# Syntax Highlighting (tree-sitter based)
tree-sitter = "0.25.10"
tree-sitter-sequel = "0.3.11"

[[example]]
name = "ide_demo"
path = "examples/ide_demo.rs"

[[example]]
name = "file_explorer"
path = "examples/file_explorer/main.rs"

[[example]]
name = "scroll_test"
path = "examples/scroll_test.rs"

