[package]
name = "adabraka-ui"
version = "0.1.1"
edition = "2021"
authors = ["Adabraka Team"]
license = "MIT"
description = "A comprehensive, professional UI component library for GPUI inspired by shadcn/ui. 70+ accessible components for building beautiful desktop applications."
repository = "https://github.com/augani/adabraka-ui"
homepage = "https://github.com/augani/adabraka-ui"
documentation = "https://docs.rs/adabraka-ui"
readme = "README.md"
keywords = ["gpui", "ui", "gui", "components", "desktop"]
categories = ["gui", "rendering"]
rust-version = "1.70"
exclude = ["assets/icons/**/*"]

[dependencies]
# Core Framework
gpui = "0.2.0"
smallvec = "1.13.2"
once_cell = "1.19"

# Text Processing
unicode-segmentation = "1.12"
regex = "1.10"

# Async Runtime
smol = "2.0.2"

# Syntax Highlighting (tree-sitter based)
tree-sitter = "0.25.10"
tree-sitter-sequel = "0.3.11"

[[example]]
name = "scroll_test"
path = "examples/scroll_test.rs"

[[example]]
name = "label_styled_demo"
path = "examples/label_styled_demo.rs"

[[example]]
name = "collapsible_styled_demo"
path = "examples/collapsible_styled_demo.rs"

[[example]]
name = "calendar_styled_demo"
path = "examples/calendar_styled_demo.rs"

[[example]]
name = "tooltip_styled_demo"
path = "examples/tooltip_styled_demo.rs"

[[example]]
name = "toggle_group_styled_demo"
path = "examples/toggle_group_styled_demo.rs"

[[example]]
name = "pagination_styled_demo"
path = "examples/pagination_styled_demo.rs"

[[example]]
name = "keyboard_shortcuts_styled_demo"
path = "examples/keyboard_shortcuts_styled_demo.rs"

[[example]]
name = "navigation_menu_styled_demo"
path = "examples/navigation_menu_styled_demo.rs"

[[example]]
name = "text_field_styled_demo"
path = "examples/text_field_styled_demo.rs"

[[example]]
name = "confirm_dialog_styled_demo"
path = "examples/confirm_dialog_styled_demo.rs"

