[package]
name = "shiori"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shiori"
path = "src/main.rs"

[dependencies]
adabraka-ui = { path = "..", features = ["editor-languages"] }
gpui = { package = "adabraka-gpui", version = "0.5", path = "../../adabraka-gpui/crates/gpui" }
smol = "2.0.2"
portable-pty = "0.8"
flume = "0.11"
thiserror = "2.0"
tree-sitter = "0.25.10"
unicode-width = "0.2"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
git2 = "0.19"
smallvec = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
url = "2"
dirs = "6"
which = "7"
